--- a/index.html
+++ b/index.html
@@ -16,243 +16,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-
+    <!-- Remix Icons: https://remixicon.com/ -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <!-- for Calender -->
     <link href="css/vanilla-calendar.min.css" rel="stylesheet" />
     <script src="js/vanilla-calendar.min.js"></script>
 
     <title>Home Page</title>
+    <!-- Link local CSS -->
+    <link rel="stylesheet" href="css/index.css">
     <style>
         body {
-            height: 5000px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-
-        #menu {
-            top: 0;
-            background: #005D9A;
-            height: 45px;
-            padding-left: 18px;
-            border-radius: 10px;
-        }
-
-        #menu ul,
-        #menu li {
-            margin: 0 auto;
-            padding: 0;
-            list-style: none;
-        }
-
-        #menu ul {
-            width: 100%;
-            text-align: center;
-        }
-
-        #menu li {
-            display: inline-block;
-            position: relative;
-        }
-
-        #menu a {
-            display: block;
-            line-height: 45px;
-            padding: 0 14px;
-            text-decoration: none;
-            color: #FFFFFF;
-            font-size: 16px;
-        }
-
-        #menu a.dropdown-arrow:after {
-            content: "\25BE";
-            margin-left: 5px;
-        }
-
-        #menu li a:hover {
-            color: #FFFFFF;
-            background: rgb(173, 129, 0);
-        }
-
-        #menu input {
-            display: none;
-            margin: 0;
-            padding: 0;
-            height: 45px;
-            width: 100%;
-            opacity: 0;
-            cursor: pointer;
-        }
-
-        #menu label {
-            display: none;
-            line-height: 45px;
-            text-align: center;
-            position: absolute;
-            right: 5px;
-            font-size: 1.4em;
-            color: #FFFFFF;
-        }
-
-        #menu label:before {
-            font-size: 1.6em;
-            color: #FFFFFF;
-            content: "\2261";
-            margin-left: 20px;
-        }
-
-        #menu ul.sub-menus {
-            height: auto;
-            overflow: hidden;
-            width: 170px;
-            background: #005D9A;
-            position: absolute;
-            z-index: 99;
-            display: none;
-        }
-
-        #menu ul.sub-menus li {
-            display: block;
-            text-align: left;
-            width: 100%;
-        }
-
-        #menu ul.sub-menus a {
-            color: #FFFFFF;
-            font-size: 16px;
-        }
-
-        #menu li:hover ul.sub-menus {
-            display: block;
-        }
-
-        #menu ul.sub-menus a:hover {
-            background: rgb(173, 129, 0);
-            color: #444444;
-        }
-
-        @media screen and (max-width: 800px) {
-            #menu {
-                top: 0;
-                position: sticky;
-                /* position: relative; */
-            }
-
-            #menu ul {
-                background: #005D9A;
-                position: absolute;
-                top: 100%;
-                right: 0;
-                left: 0;
-                z-index: 3;
-                height: auto;
-                display: none;
-                text-align: center;
-            }
-
-            #menu ul.sub-menus {
-                width: 100%;
-                position: static;
-                background-color: #A7CFDF;
-            }
-
-            #menu ul.sub-menus a {
-                padding-left: 50px;
-                text-align: center;
-            }
-
-            #menu li {
-                display: block;
-                float: none;
-                width: auto;
-            }
-
-            #menu input,
-            #menu label {
-                position: absolute;
-                top: 0;
-                left: 0;
-                display: block;
-            }
-
-            #menu input {
-                z-index: 4;
-            }
-
-            #menu input:checked+label {
-                color: #FFFFFF;
-            }
-
-            #menu input:checked+label:before {
-                content: "\00d7";
-            }
-
-            #menu input:checked~ul {
-                display: block;
-            }
-        }
-
-        /* .w-100 {
-            height: 400px;
-
-        } */
-
-        .card-col {
-            background-color: rgba(220, 245, 221, 0.726);
-            margin: 5px;
-            width: 20rem;
-            height: 10rem;
-            -webkit-animation: random 5s infinite;
-            animation: random 5s infinite;
-
-        }
-
-        @keyframes random {
-            15% {
-                background-color: rgba(182, 93, 93, 0.774);
-            }
-
-            30% {
-                background-color: rgb(184, 184, 76);
-            }
-
-            45% {
-                background-color: rgba(27, 194, 27, 0.719);
-            }
-
-            60% {
-                background-color: rgb(65, 65, 204);
-            }
-
-            75% {
-                background-color: white;
-            }
-        }
-
-        .cardsec {
-            background-color: rgb(241, 241, 214);
-            width: 100%;
-        }
-
-        .card-col:hover {
-            background-color: rgb(113, 212, 212);
-            animation: none;
-            transform: scale(0.9, 0.9);
-            box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-                -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
-        }
-
-        .content {
-            list-style-type: none;
-            display: inline-flex;
-        }
-
-        .content-link {
-            margin-left: 5px;
-            font-style: italic;
             font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-            font-size: 18px;
-            text-decoration: none;
-            color: chocolate;
         }
+
+
 
         .notice {
             /* background-color: aqua; */
@@ -263,6 +41,7 @@
             scrollbar-gutter: var(--gutter, auto);
             margin: 1rem auto 0;
             border-radius: 10px;
+            text-underline-offset: auto;
 
             &:after {
                 position: absolute;
@@ -277,28 +56,34 @@
 </head>
 
 <body>
-    <div class="container overflow-hidden text-center">
-        <div class="row gx-5">
-            <div class="col">
-                <div class="p-1"></div>
-            </div>
-            <div class="col">
-                <div class="p-1">
-                    <ul class="content">
-                        <li class="content-list"><a class="content-link" href="#menu">Skip to main</a></li>
-                        <li class="content-list"><a class="content-link" href="#">Admin</a></li>
-                        <li class="content-list"><a class="content-link" href="#">Login</a></li>
-                    </ul>
+    <header>
+        <div class="container text-center">
+            <div class="row align-items-center">
+                <div class="col-6">
+
+                </div>
+
+                <div class="col-6">
+                    <div class="">
+                        <ul class="content">
+                            <li class="content-list"><a class="content-link" href="#menu"> <i
+                                        class="ri-skip-down-line"></i>
+                                    Skip to main</a></li>
+                            <li class="content-list"><a class="content-link" href="#"><i class="ri-admin-line"></i>Admin
+                                    Login</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </header>
+
 
     <nav id='menu'>
         <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label> Menu</label>
         <ul>
-            <li><a href='#'>HOME</a></li>
-            <li><a href='#'>ABOUT US</a></li>
+            <li><a href='index.html'>HOME</a></li>
+            <li><a href='about.html'>ABOUT US</a></li>
             <li><a class='dropdown-arrow' href='#'>ACADEMIC</a>
                 <ul class='sub-menus'>
                     <li><a href='#'>Admission</a></li>
@@ -314,38 +99,40 @@
                     <!-- <li><a href='#'>Services 3</a></li> -->
                 </ul>
             </li>
+            <li><a href='gallery.html'>GALLERY</a></li>
             <li><a href='#'>NOTICES</a></li>
 
             <li><a href='#'>CONTACT US</a></li>
         </ul>
     </nav>
-    <div class="container school">
-        Koshla Public School
+
+    <div class="container text-center">
+        <img src="assets/Images/index/logo.png" alt="logo">
     </div>
 
 
     <div id="carouselExampleAutoplaying" class="carousel slide carousel-fade mb-3" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/Images/index/img0.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img0.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img1.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img1.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img2.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img2.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img3.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img3.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img4.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img4.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img5.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img5.jpg" class="d-block w-100" alt="image">
             </div>
             <div class="carousel-item">
-                <img src="assets/Images/index/img6.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Images/index/img6.jpg" class="d-block w-100" alt="image">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -438,7 +225,7 @@
 
     <div class="container text-center mt-3">
         <div class="row align-items-center">
-            <div class="col-8">
+            <div class="col-sm-8">
                 <h2>NOTICES</h2>
                 <div class="notice">
 
@@ -488,13 +275,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-sm-4">
                 <h2>CALENDER</h2>
-                <div class="container mt-3">
+                <div class="container ">
                     <div id="calendar"></div>
-
-                    <button class="btn btn-outline-warning p-3"><a href="#">Academic calender</a></button>
-                    <button class="btn btn-outline-warning p-3"><a href="#">Holidays</a></button>
+                    <div class="container p-3">
+                        <button class="btn  btn-outline-warning m-2"><a class="cal" href="#">Academic
+                                calender</a></button>
+                        <button class="btn  btn-outline-warning m-2"><a class="cal" href="#">Holidays</a></button>
+                    </div>
 
                 </div>
             </div>
@@ -503,7 +292,62 @@
 
 
 
+
 </body>
+<footer class="mt-3" id="footer">
+    <div class="container">
+        <div class="row text-center text-xs-center text-sm-left text-md-left">
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <h5>Quick links</h5>
+                <ul class="list-unstyled quick-links">
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Home</a></li>
+                    <li><a href="about.html"><i class="ri-arrow-right-double-fill"></i></i>About Us</a></li>
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Facilities</a></li>
+
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <h5>Quick links</h5>
+                <ul class="list-unstyled quick-links">
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Terms & Conditions</a></li>
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Privacy Policy</a></li>
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Career</a></li>
+
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <h5>Quick links</h5>
+                <ul class="list-unstyled quick-links">
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Contact Us</a></li>
+                    <li><a href="gallery.html"><i class="ri-arrow-right-double-fill"></i></i>Gallery</a></li>
+                    <li><a href="#"><i class="ri-arrow-right-double-fill"></i></i>Login</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                <ul class="list-unstyled list-inline social text-center">
+                    <li class="list-inline-item"><a href="#"><i class="ri-facebook-circle-fill"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="ri-twitter-x-fill"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="ri-instagram-line"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="ri-google-fill"></i></a></li>
+                    <li class="list-inline-item"><a href="#" target="_blank"><i class="ri-mail-send-fill"></i></a></li>
+                </ul>
+            </div>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+
+                <p class="h6">© 2024 KHOSAL PUBLIC SCHOOL<a class="text-green ml-2" href="https://www.sunlimetech.com"
+                        target="_blank"> | ALL RIGHTS RESERVED</a></p>
+
+            </div>
+            <hr>
+        </div>
+    </div>
+</footer>
 <script>
     function updatemenu() {
         if (document.getElementById('responsive-menu').checked == true) {
