--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </nav>
 
     <div class="container text-center">
-        <img src="assets/Images/index/logo.png" alt="logo">
+        <img src="assets/Images/index/logo.png" class="d-block w-100" alt="logo">
     </div>
 
 
