--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <link href="assets/css/nav.css" rel="stylesheet">
 
 </head>
+    <style>
+    .contact {
+        color: rgb(173, 129, 0);
+    }
+</style>
 
 <body>
     <section style="background-color:#005D9A;padding: 3px;">
